Changes after review

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -85,7 +85,7 @@
                 style="width: 100%;" 
                 :disabled="expense_parts.length > 1"
               >
-                <option value="">- Year -</option>
+                <option value="">- Välj år -</option>
                 <option v-for="year in years" :key="year" :value="year">
                   {% verbatim %}
                   {{ year }}
