--- a/templates/admin/confirm/overview.html
+++ b/templates/admin/confirm/overview.html
@@ -22,10 +22,12 @@
         </thead>
         <tr v-for="expense in expenses" v-if="!(digital && expense.is_digital !== true || analog && expense.is_digital !== false)">
             <td v-if="!expense.confirmed">
+                {% if user.profile.may_confirm %}
                 <form v-on:submit.prevent="conf(expense)" method="POST" :action="'expense/' + expense.id + '/confirm/'">
                     {% csrf_token %}
                     <button class="theme-color btn-color" v-on:click="conf(expense, $event)">Bekräfta giltighet</button>
                 </form>
+                {% endif %}
             </td>
             <td v-else>
                 Bekräftad
