Make deleting files possible

--- a/templates/expenses/edit.html
+++ b/templates/expenses/edit.html
@@ -1,7 +1,7 @@
 {% extends "../detail.html" %}
 {% load widget_tweaks %}
 
-{% block title %}Ändra kvitto{% endblock %}
+{% block title %}Redigera kvitto{% endblock %}
 
 {% block full_content %}
 <div id="form" class="form" style="margin-top: -30px;">
