--- a/templates/expenses/new.html
+++ b/templates/expenses/new.html
@@ -139,7 +139,7 @@
                                 </optgroup>
                                 <optgroup label="Övrigt">
                                     <option
-                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.type != 'project')"
+                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.CostCentreType != 'project')"
                                         :key="costCentre.CostCentreID"
                                         v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
                                         v-text="costCentre.CostCentreName"
